<resources>
    <string name="app_name">Tank Fabrication</string>
    <string name="user_login">User Login</string>
    <string name="enter_your_email_here">Enter Email Id</string>
    <string name="enter_your_password_here">Enter Password</string>
    <string name="log">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="footer">© 2022. Developed By <a href="https://railbit.in/">Railbit Engineers Pvt Ltd</a>.</string>
    <string name="successfully_logged_in_your_email">SuccessFully Logged In, Your Email =</string>
    <string name="log_out">Log Out</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="bs_type">BS Type</string>
    <string name="wheelbase">Wheel Base</string>
    <string name="ladenwgt">Laden Wt</string>
    <string name="unladenwgt">Unladen Wt</string>
    <string name="select_file">Select FIle</string>
    <string name="title_activity_main">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tank Fabrication</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu_home">New Vehicle-In</string>
    <string name="add_drawing">Add Drawing</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="file_name">File Name</string>
    <string name="next">Next</string>
    <string name="category">Category</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planning_procurement"><![CDATA[Planning & Procurement]]></string>
    <string name="drawing_no">Drawing No</string>
    <string name="need_to_apply">Need to Apply</string>
    <string name="die_availability">Die Availability</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="procurement">Procurement</string>
    <string name="cutting_bending_drawings">Cutting/Bending Drawings</string>
    <string name="registration_number">Registration Number</string>
    <string name="chessis_number">Chessis Number</string>
    <string name="engine_number">Engine Number</string>
    <string name="delivered_by">Delivered By</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="received_by">Received By</string>
    <string name="customer_details">Customer Details</string>
    <string name="address">Address</string>
    <string name="company_name">Company Name</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_no">Contact No</string>
    <string name="tank_details">Tank Details</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
    <string name="in_date">In Date</string>
    <string name="delivery_schedule">Delivery Schedule</string>
    <string name="depot_name">Depot Name</string>
    <string name="oil_company">Oil Company</string>
    <string name="compartment_distribution">Compartment Distribution</string>
    <string name="capacity">Capacity</string>
    <string name="photo">Photo</string>
    <string name="acccesories_received">Acccesories Received</string>
    <string name="spare_wheel">Spare Wheel</string>
    <string name="jack">Jack</string>
    <string name="jack_rod">Jack Rod</string>
    <string name="tool_kit">Tool Kit</string>
    <string name="back_sensors">Back Sensors</string>
    <string name="reflector">Reflector</string>
    <string name="cabin_fire_extingusher">Cabin Fire Extingusher</string>
    <string name="rear_lights">Rear Lights</string>
    <string name="battery_serial_number">Battery Serial Number</string>
    <string name="diesel_in_tank_liters">Diesel in Tank (Liters)</string>
    <string name="deal_includes">Deal Includes</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dip_rod">Dip Rod</string>
    <string name="delivery_hose">Delivery Hose</string>
    <string name="parking_cone">Parking Cone</string>
    <string name="additional_work">Additional Work (if any)</string>
    <string name="cabin_color">Cabin Color</string>
    <string name="denting_painting">Denting Painting</string>
    <string name="existing_fault">Existing Fault</string>
    <string name="remarks">Remarks</string>
    <string name="select_in_date">Select In Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="planning_amp_procurement"><![CDATA[Planning & Procurement]]></string>
    <string name="compartment">Compartment</string>
    <string name="approval_letter_number">Approval Letter Number</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>
    <string name="tank_fabrication">Tank Fabrication</string>
    <string name="fittings">Fittings</string>
    <string name="other_accessories">Other Accessories</string>
    <string name="released">Released</string>
    <string name="not_released">Not Released</string>
    <string name="previous">Previous</string>
    <string name="released_to_tank_team">Released to Tank Team</string>
    <string name="team_name">Team name</string>
    <string name="select_date">Select Date</string>
    <string name="drawing_clear">Drawing Clear</string>
    <string name="material_received">Material Received</string>
    <string name="cardel_support_godi">Cardel Support (Godi)</string>
    <string name="mounted_on_vehicle">Mounted on Vehicle</string>
    <string name="gate_pass_to_fitting_team">Gate Pass to Fitting Team</string>
    <string name="assigned_to">Assigned To</string>
    <string name="assigned_date">Assigned Date</string>
    <string name="fittings_pre_test">Fittings - Pre Test</string>
    <string name="material_available">Material Available</string>
    <string name="safety_fittings">Safety Fittings</string>
    <string name="pipe_line">Pipe Line</string>
    <string name="leak_test">Leak Test</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="done_by">Done By</string>
    <string name="safety_fitting_number">Safety Fitting Number</string>
    <string name="safety_fitting_invoice_number">Safety Fitting Invoice Number/Supplier Name</string>
    <string name="safety_fittings_verified_by">Safety Fittings Verified By</string>
    <string name="gate_pass">Gate Pass</string>
    <string name="driver_name">Driver Name</string>
    <string name="tank_team_member">Tank Team Member</string>
    <string name="leak_fix">Leak Fix</string>
    <string name="post_test_fittings">Post Test Fittings</string>
    <string name="outer_assembly">Outer Assembly</string>
    <string name="lever_arrangement">Lever Arrangement</string>
    <string name="locking">Locking</string>
    <string name="inside_tank">Inside Tank</string>
    <string name="dip_plate">DIP Plate</string>
    <string name="cleaning">Cleaning</string>
    <string name="tank_top">Tank Top</string>
    <string name="checklist_a">Checklist A</string>
    <string name="line_and_valve_box">Line and Valve Box</string>
    <string name="lever_and_lever_box">Lever and Lever Box</string>
    <string name="fire_screen">Fire Screen</string>
    <string name="u_bolts_and_rubbers">U Bolts and Rubbers</string>
    <string name="side_mud_guards">Side Mud Guards</string>
    <string name="hose_pipe_stand">Hose Pipe Stand</string>
    <string name="fire_ext_stand">Fire Ext Stand</string>
    <string name="dip_rod_stand">Dip Rod Stand</string>
    <string name="earthing">Earthing</string>
    <string name="tank_cleaning">Tank Cleaning</string>
    <string name="shutoff_valve_posotion">Shutoff Valve Posotion</string>
    <string name="safety_fitting">Safety Fitting</string>
    <string name="top_cover">Top Cover</string>
    <string name="gasket">Gasket</string>
    <string name="grinding_and_release_to_color_team">Grinding and Release to Color Team</string>
    <string name="coloring">Coloring</string>
    <string name="grinding_check">Grinding Check</string>
    <string name="primer">Primer</string>
    <string name="putty">Putty</string>
    <string name="rubbing_and_surface_check">Rubbing and Surface Check</string>
    <string name="base_color">Base Color</string>
    <string name="branding_color">Branding Color</string>
    <string name="touch_up_stage">Touch Up Stage</string>
    <string name="main_hole_cover">Main Hole Cover</string>
    <string name="ladder">Ladder</string>
    <string name="al_top">AL Top</string>
    <string name="locking_and_safety">Locking and Safety</string>
    <string name="accessories_installation">Accessories Installation</string>
    <string name="final_color">Final Color</string>
    <string name="sticker">Sticker</string>
    <string name="checklist_pre_delivery">Checklist - Pre Delivery</string>
    <string name="tank_mounting">Tank Mounting</string>
    <string name="valve_and_lever_box">Valve and Lever Box</string>
    <string name="color">Color</string>
    <string name="number_plates">Number Plates</string>
    <string name="accessories">Accessories</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="image_4">Image 4</string>
    <string name="image_5">Image 5</string>
    <string name="image_6">Image 6</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="authorised_by">Authorised by</string>
    <string name="gate_pass_received_by">Gate Pass Received By</string>
    <string name="gate_pass_assigned_to">Gate Pass Assigned to</string>
    <string name="gate_pass_assigned_date">Gate Pass Assigned Date</string>
    <string name="aluminium_material">Aluminium Material</string>
    <string name="steel_material">Steel Material</string>
    <string name="extra_accessories">Extra Accessories</string>
    <string name="cutting_and_bending_material">Cutting and Bending Material</string>
    <string name="ready_for_leak_test">Ready for Leak Test</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="compartment_1">Compartment 1</string>
    <string name="compartment_2">Compartment 2</string>
    <string name="compartment_3">Compartment 3</string>
    <string name="compartment_4">Compartment 4</string>
    <string name="compartment_5">Compartment 5</string>
    <string name="compartment_6">Compartment 6</string>
    <string name="ownership">Ownership</string>
    <string name="safety_fitting_number_for_compartment_1">Safety Fitting Number for Compartment 1</string>
    <string name="safety_fitting_number_for_compartment_2">Safety Fitting Number for Compartment 2</string>
    <string name="safety_fitting_number_for_compartment_3">Safety Fitting Number for Compartment 3</string>
    <string name="safety_fitting_number_for_compartment_4">Safety Fitting Number for Compartment 4</string>
    <string name="safety_fitting_number_for_compartment_5">Safety Fitting Number for Compartment 5</string>
    <string name="safety_fitting_number_for_compartment_6">Safety Fitting Number for Compartment 6</string>
    <string name="compartment_1_of_1">1 of 1</string>
    <string name="compartment_2_of_1">2 of 1</string>
    <string name="compartment_3_of_1">3 of 1</string>
    <string name="compartment_4_of_1">4 of 1</string>
    <string name="compartment_1_of_2">1 of 2</string>
</resources>