<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/edit"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/add_drawing" />

        <item
            android:id="@+id/nav_planning"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/planning_amp_procurement"
            android:visible="false" />

        <item
            android:id="@+id/nav_tankfab"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/tank_fabrication"
            android:visible="false" />

        <item
            android:id="@+id/nav_fitting"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/fittings_pre_test"
            android:visible="false" />

        <item
            android:id="@+id/nav_leaktest"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/leak_test"
            android:visible="false" />

        <item
            android:id="@+id/nav_post_test"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/post_test_fittings"
            android:visible="false" />

        <item
            android:id="@+id/nav_checklista"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/checklist_a"
            android:visible="false" />

        <item
            android:id="@+id/nav_coloring"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/coloring"
            android:visible="false" />

        <item
            android:id="@+id/nav_touchup"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/touch_up_stage"
            android:visible="false" />

        <item
            android:id="@+id/nav_checklistpredelivery"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/checklist_pre_delivery"
            android:visible="false" />

    </group>
</menu>