<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.e4.ui.upload.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_vehicle" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.e4.ui.report.AddDrawingFragment"
        android:label="@string/add_drawing"
        tools:layout="@layout/fragment_drawing" />

    <fragment
        android:id="@+id/nav_planning"
        android:name="com.example.e4.PlanningFragment"
        android:label="@string/planning_amp_procurement"
        tools:layout="@layout/fragment_drawing" />

    <fragment
        android:id="@+id/nav_tankfab"
        android:name="com.example.e4.TankFabFragment"
        android:label="@string/tank_fabrication"
        tools:layout="@layout/fragment_tank_fab" />

    <fragment
        android:id="@+id/nav_fitting"
        android:name="com.example.e4.FittingFragment"
        android:label="@string/fittings_pre_test"
        tools:layout="@layout/fragment_fitting" />

    <fragment
        android:id="@+id/nav_leaktest"
        android:name="com.example.e4.LeakTestFragment"
        android:label="@string/leak_test"
        tools:layout="@layout/fragment_leak_test" />

</navigation>