<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="5dp"
    tools:context="com.example.e4.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:text="@string/checklist_pre_delivery"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <!--    Tank Mounting -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/tank_mounting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/tank_mounting" />

                <!--    Safety Fittings -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/safety_fittings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/safety_fittings" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <!--     Valve and Lever Box       -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/valve_lever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/valve_and_lever_box" />

                <!--     Locking       -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/locking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/locking" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <!--     Color        -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/color" />

                <!--     Sticker       -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/sticker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/sticker" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <!--     Number Plates        -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/number_plates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/number_plates" />

                <!--     Accessories       -->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/accessories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/accessories" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_predelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="50"
            android:backgroundTint="@color/yellow"
            android:drawableLeft="@android:drawable/ic_media_previous"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next_predelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="50"
            android:backgroundTint="@color/green"
            android:drawableEnd="@android:drawable/ic_media_next"
            android:shadowColor="@android:color/transparent"
            android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>
